[project]
name = "emqx-mcp-server"
version = "0.1.0"
description = "EMQX MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
]

[project.scripts]
emqx-mcp-server = "emqx_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"