[project]
name = "emqx-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server implementation that provides EMQX MQTT broker interaction."
keywords = ["emqx", "mqtt", "mcp", "llm"]
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Benniu Ji", email = "benniuji@gmail.com"}]
maintainers = [{ name = "Benniu Ji", email = "benniuji@gmail.com"}]
license = {file = "LICENSE"}
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
]

[project.scripts]
emqx-mcp-server = "emqx_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"